--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,10 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "scss",
+      "scss/menu"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -32,10 +35,17 @@
         "scss/menu/_variables.scss",
         "scss/menu/_mixins.scss"
       ]
+    },
+    {
+      "path": "scss/menu/_controller.scss",
+      "imports": [
+        "scss/menu/_variables.scss",
+        "scss/menu/_mixins.scss"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
