--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,6 +42,14 @@
         "scss/menu/_variables.scss",
         "scss/menu/_mixins.scss"
       ]
+    },
+    {
+      "path": "pug/index.pug",
+      "imports": [
+        "pug/mixins/header.pug",
+        "pug/mixins/stylesheets.pug",
+        "pug/mixins/scripts.pug"
+      ]
     }
   ],
   "projectView": {
