--- a/prepros-6.config
+++ b/prepros-6.config
@@ -53,7 +53,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -162,7 +162,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"output\":{\"replaceSegmentsWith\":\"dist/css\"},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"output\":{\"replaceSegmentsWith\":\"../dist/css\"},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegmentsWith\":\"../dist/css\"},\"outputSuffix\":null}",
   "autoprefixer": {
     "browsers": "last 5 versions"
