--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,11 +2,42 @@
   "name": "menu.sass",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "scss/menu/_mixins.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
+    },
+    {
+      "path": "scss/menu/_variables.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-minify-css\":{\"enabled\":true},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"outputSuffix\":null}"
+    },
+    {
+      "path": "scss/menu/menu.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-minify-css\":{\"enabled\":true},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"outputSuffix\":null}"
+    },
+    {
+      "path": "scss/style.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-minify-css\":{\"enabled\":true},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"outputSuffix\":null}"
+    },
+    {
+      "path": "scss/_menu.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
+    },
+    {
+      "path": "scss/menu/_controller.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-minify-css\":{\"enabled\":true},\"compiler-ruby-sass\":{\"enabled\":true,\"outputStyle\":\"nested\",\"lineNumbers\":false},\"outputSuffix\":null}"
+    },
+    {
+      "path": "scss/menu/_settings.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
       "scss",
-      "scss/menu"
+      "scss/menu",
+      "dist",
+      "dist/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -162,7 +193,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"output\":{\"replaceSegmentsWith\":\"../dist/css\"},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"ruby-sass\",\"minify-css\"],\"output\":{\"replaceSegmentsWith\":\"dist/css\"},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegmentsWith\":\"../dist/css\"},\"outputSuffix\":null}",
   "autoprefixer": {
     "browsers": "last 5 versions"
